--- a/package.json
+++ b/package.json
@@ -2,22 +2,29 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://victoriasyluma.github.io/goit-react-hw-05-movies/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/node-sass": "^4.11.3",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "saas": "^1.0.0",
+    "sass": "^1.62.0",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "lint:js": "eslint src/**/*.{js,jsx,tsx}"
   },
   "eslintConfig": {
     "extends": [
